--- a/Gensim功能展示.ipynb
+++ b/Gensim功能展示.ipynb
@@ -281,20 +281,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models.phrases import Phrases\n",
+    " \n",
+    "# 读取text8数据集\n",
+    "text_path = 'data_text8.txt'\n",
+    "data = []\n",
+    "with open(text_path) as file:\n",
+    "    for i in range(200):\n",
+    "        data.append(file.readline().split(','))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import gensim.downloader as api\n",
-    "from gensim.models.phrases import Phrases\n",
-    " \n",
-    "# 读取text8数据集\n",
-    "dataset = api.load(\"text8\")\n",
-    "data =[]\n",
-    "for word in dataset:\n",
-    "    data.append(word)\n",
-    "               \n",
     "# 使用Phraser模型构建Bigram模型             \n",
     "bigram_model = Phrases(data, min_count = 3, threshold = 10)\n",
     "print(bigram_model[data[0]]) \n",
@@ -328,18 +334,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gensim.downloader as api\n",
     "from multiprocessing import cpu_count\n",
     "from gensim.models.word2vec import Word2Vec\n",
-    " \n",
-    "dataset = api.load(\"text8\")\n",
-    "data =[]\n",
-    "for word in dataset:\n",
-    "    data.append(word)\n",
     "\n",
     "# 将数据集划分为两部分，一部分训练模型，另一部分更新模型\n",
-    "data_1 = data[:1200]  \n",
-    "data_2 = data[1200:]   \n",
+    "data_1 = data[:100]  \n",
+    "data_2 = data[100:]   \n",
     " \n",
     "# 训练Word2Vec模型\n",
     "w2v_model = Word2Vec(data_1, min_count = 0, workers = cpu_count())\n",
@@ -397,6 +397,35 @@
     "w2v_model.build_vocab(data_2, update = True)\n",
     "w2v_model.train(data_2, total_examples = w2v_model.corpus_count, epochs = w2v_model.iter)\n",
     "print(w2v_model['time'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gensim中Doc2Vec的使用\n",
+    "\n",
+    "Doc2vec方法是一种无监督算法，能从变长的文本（例如：句子、段落或文档）中学习得到固定长度的特征表示，用一个向量表示不同的文档，潜在地克服词袋模型的缺点。\n",
+    "\n",
+    "参考资料：https://zhuanlan.zhihu.com/p/136096645"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import doc2vec\n",
+    " \n",
+    "# To train the model we need a list of tagged documents\n",
+    "def tagged_document(list_of_ListOfWords):\n",
+    "    for x, ListOfWords in enumerate(list_of_ListOfWords):\n",
+    "        yield doc2vec.TaggedDocument(ListOfWords, [x])\n",
+    "\n",
+    "# 训练数据\n",
+    "data_train = list(tagged_document(data))\n",
+    "print(data_train[:1])"
    ]
   }
  ],
